--- a/front/test.html
+++ b/front/test.html
@@ -27,7 +27,7 @@
             <a href="#">장바구니</a>
             <a href="#">내 정보</a>
             <a href="#">고객센터</a>
-            <a href="create-item.html">상품등록</a> <!-- 상품등록 페이지 링크 추가 -->
+            <a href="create-item.html">상품등록</a> 
         </div>
     </nav>
     
